# exiftool-handler

./: .gitignore  README.md  module_exiftool_python2.py  module_exiftool_python3.py  ncas-image-metadata-standard_v1-0_template_data-plot.yaml  ncas-image-metadata-standard_v1-0_template_photo.yaml  pyproject.toml
src/exiftool_handler/: __init__.py
